--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <!-- Sidebar -->
       <aside class="sidebar">
         <img
-          src="photo.JPG"
+          src="photo.jpg"
           alt="MyPhoto"
           width="370px"
           class="my-photo"
